[build-system]
# Define build dependencies and backend
requires = ["setuptools>=61", "setuptools-rust>=1.10"]
build-backend = "setuptools.build_meta"

[project]
name = "msutorch"
version = "0.1.0"
description = "MSU RFML Signal Detection Pipeline (TorchSig-based)"
authors = [
    {name = "MSU RFML Pipeline Team"},
]
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["signal processing", "machine learning"]

classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
# Runtime dependencies
dependencies = [
    # Core Libraries
    "tqdm",
    "numpy<2",
    "PyYAML",
    "pillow",
    "opencv-python-headless",

]


[project.urls]
Homepage = "https://torchsig.com/"
Documentation = "https://torchsig.readthedocs.io/en/latest/index.html"
Repository = "https://github.com/TorchDSP/torchsig.git"
Issues = "https://github.com/TorchDSP/torchsig/issues"

[tool.setuptools.packages.find]
# Automatically find all packages starting in root directory
where = ["."]
include = ["MSUTorch*"]
optional = false                          # Crash if the extension build fails

[tool.coverage.run]
branch = true
source = ["MSUTorch"]

[tool.coverage.report]
show_missing = true
skip_covered = true
omit = [
    "MSUTorch/models/*"
]

[tool.pytest.ini_options]
# Configure pytest behavior and test discovery
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
addopts = "-m 'not slow' --cov=MSUTorch --cov-report=xml --cov-report=term --junitxml=report.xml"
testpaths = ["tests"]
